fixed gap

--- a/scss/layout/_media.scss
+++ b/scss/layout/_media.scss
@@ -888,9 +888,9 @@
     .portfolio-section {
         .portfolios{
             .item{
-                flex-basis:50%;
-                padding: 0 2rem;
-                margin-bottom:30px;
+                flex-basis:40%;
+                padding: 0;
+                margin: 0 5% 20px;
             }
         }
         .linking-area {
